--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,8 +8,8 @@ build:
   binary: awsctl
   main: ./cmd/awsctl
   flags:
-      - -mod=vendor
-  ldflags: -s -w -X github.com/outlawlabs/cmd/awsctl/main.timestamp={{.Date}} -X github.com/outlawlabs/cmd/awsctl/main.commitHash={{.Commit}} -X github.com/outlawlabs/cmd/awsctl/main.version={{.Version}}
+    - -mod=vendor
+  ldflags: -s -w -X main.timestamp={{.Date}} -X main.commitHash={{.Commit}} -X main.version={{.Version}}
   goos:
     - darwin
     - linux
@@ -25,7 +25,7 @@ build:
   env:
     - CGO_ENABLED=0
 archive:
-  name_template: "{{.Binary}}_{{.Version}}_{{.Os}}-{{.Arch}}"
+  name_template: '{{.Binary}}_{{.Version}}_{{.Os}}-{{.Arch}}'
   replacements:
     amd64: 64bit
     386: 32bit
@@ -39,7 +39,7 @@ archive:
     - goos: windows
       format: zip
   files:
-  - LICENSE
+    - LICENSE
 snapshot:
   name_template: SNAPSHOT-{{ .Commit }}
 checksum:
