--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,11 +18,20 @@ build:
     - windows
   goarch:
     - amd64
+    - arm64
   env:
     - CGO_ENABLED=0
 
 archives:
-  - format: binary
+  - name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+    replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      amd64: x86_64
+    format_overrides:
+      - goos: windows
+        format: zip
 
 snapshot:
   name_template: SNAPSHOT-{{ .Commit }}
